Update XSL